ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
        #controller: nginx.org/ingress-controller
  parameters:
