node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
       labels:
         app: node-app
    spec:
      containers:
        - name: node-container
          image: cloudservos2607/node-image:latest
