node-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
