ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
spec:
  ingressClassName: nginx
  rules:
    - http: 
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service: 
                name: node-service
                port:
                  number: 80
